--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <enlace rel="preconectar" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=Poppins:ital,wght@0,400;0,600;0,700;1,300&display=swap" rel="stylesheet">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@600&family=Poppins:ital,wght@0,400;0,600;0,700;1,300&family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="normalize.css" />
     <link rel="stylesheet" href="./css/all.min.css" />
 
@@ -31,6 +33,10 @@
       </nav>
   <section class="section1">
     <div class="background">
+      <div class="inicia-sesion">
+<h3>Inicia Sesion!</h3>
+<P>Inicia sesion y personaliza tu viaje</P>
+</div>
       <img
         class="bg-form"
      
@@ -39,13 +45,13 @@
     <div class="container_form">
         <form class="formulario">
           <label for="">Email</label>
-          <input type="email" name="" id="" />
+          <input type="email" name="" id=""  placeholder="Ingrese su Email">
           <label for="">Nombre</label>
-          <input type="text" name="" id="" />
+          <input type="text" name="" id="" placeholder="Ingrese su Nombre"/>
           <label for="">Password</label>
-          <input type="password" name="" id="" />
+          <input type="password" name="" id="" placeholder="Ingrese su contraseña"/>
           <label for="">Confirm password</label>
-          <input type="password" name="" id="" />
+          <input type="password" name="" id="" placeholder="Ingrese nuevamente su contraseña"/>
 
           <div class="btn-form_flex">
             <button class="boton-1" type="submit">Iniciar Sesion</button>
